--- a/style.css
+++ b/style.css
@@ -3,3 +3,73 @@
     background-position: center;
     background-size: cover;
 }
+
+.button {
+    background-color: white; 
+    border: none;
+    color: black;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+  }
+
+  .navbar {
+    overflow: hidden;
+    background-color: #A943F8;
+    position: -webkit-sticky;
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+  }
+
+  .navbar a {
+    color: white;
+    text-align: center;
+    padding: 14px 50px;
+    text-decoration: none;
+  }
+
+  @media screen and (max-width: 400px) {
+    .navbar a {
+      float: none;
+      width: 100%;
+    }
+  }
+
+  .img-profile {
+    top: 100px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 50%;
+    width: 25%;
+    position: relative;
+    
+  }
+
+  p {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 200;
+  }
+
+  .intro {
+      position: relative;
+      top: 40px;
+      color: white;
+      font-size: 75px;
+      text-align: center;
+  }
+
+  .intro2 {
+    position: relative;
+    top: -40px;
+    color: white;
+    font-size: 50px;
+    text-align: center;
+}
