--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@
     }
   }
 
-  .img-profile {
+  img.profile {
     top: 100px;
     display: block;
     margin-left: auto;
@@ -62,6 +62,22 @@
     
   }
 
+  img.left {
+    display: block;
+    width: 25%;
+    position: relative;
+    float: left;
+    margin-right: 25px;
+    
+  }
+  img.right {
+    display: block;
+    width: 25%;
+    position: relative;
+    float: right;
+    margin-left: 25px;
+    
+  }
   p {
     font-family: 'Montserrat', sans-serif;
     font-weight: 200;
@@ -121,6 +137,13 @@
     text-align: left;
 }
 
+.p-title{
+  position: relative;
+  color:white;
+  font-size: 24px;
+  text-align: left;
+}
+
 .container{
     padding: 16px; 
     margin-top: 50px;
@@ -128,5 +151,7 @@
 
 .container1{
     padding: 16px; 
-    background-color: #3C6BF0;
+    background-color: #100F17;
+    margin: 16px;
+    color: white;
 }
