--- a/style.css
+++ b/style.css
@@ -143,6 +143,13 @@
   font-size: 24px;
   text-align: left;
 }
+.p-title2{
+  position: relative;
+  color:white;
+  font-size: 32px;
+  text-align: center;
+  margin: 0px;
+}
 
 .container{
     padding: 16px; 
@@ -154,4 +161,12 @@
     background-color: #100F17;
     margin: 16px;
     color: white;
+}
+
+.side{
+  position: relative;
+    color: white;
+    font-size: 12px;
+    text-align: right;
+    margin: 0px 5px;
 }
